<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bgfiche" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageCocktail1"
                    android:layout_width="142dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/Description"
                    android:src="@drawable/cocktail_americano" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/NomCocktail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/TitleCocktail"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/Ingredients"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Ingredients"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/listIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:lines="10"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/listIngredients"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" >

                    <ImageButton
                        android:id="@+id/favori2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="20dp"
                        android:clickable="true"
                        android:contentDescription="@string/Description"
                        android:src="@android:drawable/btn_star" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="@string/Teneur"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <ProgressBar
                            android:id="@+id/teneurenalcool"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:max="10" />
                    </LinearLayout>

                    <RatingBar
                        android:id="@+id/ratingBar1"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:max="5"
                        android:numStars="5"
                         />
                </LinearLayout>

                <TextView
                    android:id="@+id/Recette"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/Recette"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:layout_weight="3.07"
                    android:paddingLeft="20dp"
                    android:paddingBottom="20dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
   
</RelativeLayout>
